<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/tushar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:text="@string/role" />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="goToAboutMe"
        android:text="@string/know_more" />
</LinearLayout>