<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe">

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/tt"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/consultant_at_thoughtworks" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/profile"
        android:layout_above="@+id/contact"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Education"
            android:onClick="goToEducation"
            >

        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="10sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/instagram"
            android:layout_marginHorizontal="10sp"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/instagram">
        </ImageView>

        <ImageView
            android:id="@+id/facebook"
            android:layout_marginHorizontal="10sp"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/facebook">
        </ImageView>

        <ImageView
            android:id="@+id/twitter"
            android:layout_marginHorizontal="10sp"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/twitter">
        </ImageView>

        <ImageView
            android:id="@+id/linkedIn"
            android:layout_marginHorizontal="10sp"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/linkedin">
        </ImageView>

        <ImageView
            android:id="@+id/github"
            android:layout_marginHorizontal="10sp"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/github">
        </ImageView>
    </LinearLayout>
</RelativeLayout>